Made some changes

--- a/index.html
+++ b/index.html
@@ -1,139 +1,158 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moh's Portfolio</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Moh's Portfolio</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet">
 
 
 </head>
+
 <body>
-    <header>
+  <header>
     <h1>Hi, my name is Maureen Wanjiku</h1>
     <p>I'm a tech enthusiast | Aspiring Full stack developer.</p>
-</header>
+  </header>
 
-<nav>
+  <nav>
     <ul>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#languages">Languages</a></li>
-        <li><a href="#interests">Interests</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#languages">Languages</a></li>
+      <li><a href="#interests">Interests</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-</nav>
+  </nav>
 
-     <!-- The main content of the portfolio -->
-<main>
+  <!-- The main content of the portfolio -->
+  <main>
 
     <!-- About me section -->
     <section id="about">
       <h2>This is my about page</h2>
-        <p>I'm a born again tech enthusiast with a passion for learning and growing in the field of technology. 
-        I'm someone who genuinely loves tech not just the gadgets and tools, but how technology can solve real problems and improve lives. 
-        I enjoy building systems that work, fixing things that don’t, and helping others along the way.At the core of everything I do is a bigger dream: 
-        to grow in the tech world so I can teach others, create meaningful solutions, and help make Kenya more tech-savvy. But beyond that, I’m passionate about 
-        merging tech with my faith in Christ to build systems and platforms that not only work but also uplift, inspire, and reflect God’s purpose.For me, it’s all 
+      <p>I'm a born again tech enthusiast with a passion for learning and growing in the field of technology.
+        I'm someone who genuinely loves tech not just the gadgets and tools, but how technology can solve real problems
+        and improve lives.
+        I enjoy building systems that work, fixing things that don’t, and helping others along the way.At the core of
+        everything I do is a bigger dream:
+        to grow in the tech world so I can teach others, create meaningful solutions, and help make Kenya more
+        tech-savvy. But beyond that, I’m passionate about
+        merging tech with my faith in Christ to build systems and platforms that not only work but also uplift, inspire,
+        and reflect God’s purpose.For me, it’s all
         about learning, building, and using tech to make a difference both practically and spiritually.</p>
 
     </section>
 
-<!-- My education section -->
+    <!-- My education section -->
     <section id="education">
-        <h2>Education</h2>
-       <p>
-    I'm currently pursuing a certificate in Web Development at <strong>Power Learn Project School</strong>, where I’m building skills in creating real world tech solutions.  
-    Before that, I had the opportunity to study at <strong>Yada School of Tech</strong>, where my passion for technology really began.  
-    These experiences have laid a solid foundation for my journey in tech and continue to shape the kind of solutions I aim to build.
-  </p>
-  <ul>
-    <li>
-        <strong>Certificate in Web Development</strong><br>
-        Power Learn Project School, 2025 July - Present
-    </li>
-    <strong>PHP and laravel</strong><br>
-    Yada School of Tech, 2023 January - 2023 June
-    </li>
-  </ul>
+      <h2>Education</h2>
+      <p>
+        I'm currently pursuing a certificate in Web Development at <strong>Power Learn Project School</strong>, where
+        I’m building skills in creating real world tech solutions.
+        Before that, I had the opportunity to study at <strong>Yada School of Tech</strong>, where my passion for
+        technology really began.
+        These experiences have laid a solid foundation for my journey in tech and continue to shape the kind of
+        solutions I aim to build.
+      </p>
+      <ul>
+        <li>
+          <strong>Certificate in Web Development</strong><br>
+          Power Learn Project School, 2025 July - Present
+        </li>
+        <strong>PHP and laravel</strong><br>
+        Yada School of Tech, 2023 January - 2023 June
+        </li>
+      </ul>
 
-  <p>
-    <a href="https://drive.google.com/file/d/1yPGGGYkre-fd08LGf9XIBo9dNqMVKDC1/view?usp=drive_link">My CV</a>
-  </p>
+      <p>
+        <a href="https://drive.google.com/file/d/1yPGGGYkre-fd08LGf9XIBo9dNqMVKDC1/view?usp=drive_link">My CV</a>
+      </p>
     </section>
 
     <!-- My languages and proficiency section -->
-    <section id=""languages>
-        <h2>Languages</h2>
-        <ol>
-                    <p>I am proficient in the following languages with the proficient level included.</p>
-            <li>HTML - 40%</li>
-            <li>CSS - 40%</li>
-            <li>PHP - 30%</li>
-            <li>laravel - 30%</li>
-            <LI>Javascript - 30%</LI>
-            <li>Express - 10%</li>
+    <section id="" languages>
+      <h2>Languages</h2>
+      <p>I am proficient in the following languages with the proficiency level included.</p>
 
-        </ol>
+      <ol>
+        <li>HTML - 40%</li>
+        <li>CSS - 40%</li>
+        <li>PHP - 30%</li>
+        <li>laravel - 30%</li>
+        <LI>Javascript - 30%</LI>
+        <li>Express - 10%</li>
+
+      </ol>
     </section>
 
     <!-- My interests section -->
     <section id="interests">
-        <h2>My Interests</h2>
-        <p>
-    What excites me most about technology is its ability to solve real-world problems and make life easier for individuals and communities. 
-    I’m especially passionate about using tech to build solutions that are practical, scalable, and accessible—particularly in areas that are still growing digitally, like many parts of Kenya.
-  </p>
-  <p>
-    I love exploring how systems work behind the scenes, from web development to automation and system integration. My professional interests include software development, 
-    system design, and eventually teaching others how to use tech for impact. I’m also deeply passionate about merging technology with my faith in Christ to create solutions that are both technically sound and spiritually uplifting.
-  </p>
-  <p>
-    In the long term, I hope to empower others through tech education, create systems that serve communities, and help Kenya—and beyond—become more tech-savvy, one solution at a time.
-  </p>
+      <h2>My Interests</h2>
+      <p>
+        What excites me most about technology is its ability to solve real-world problems and make life easier for
+        individuals and communities.
+        I’m especially passionate about using tech to build solutions that are practical, scalable, and
+        accessible—particularly in areas that are still growing digitally, like many parts of Kenya.
+      </p>
+      <p>
+        I love exploring how systems work behind the scenes, from web development to automation and system integration.
+        My professional interests include software development,
+        system design, and eventually teaching others how to use tech for impact. I’m also deeply passionate about
+        merging technology with my faith in Christ to create solutions that are both technically sound and spiritually
+        uplifting.
+      </p>
+      <p>
+        In the long term, I hope to empower others through tech education, create systems that serve communities, and
+        help Kenya—and beyond—become more tech-savvy, one solution at a time.
+      </p>
     </section>
 
 
-  <!-- My projects section -->
-   <section id="projects">
-    <h2>Projcects</h2>
-    <p>Here are some projects that i have worked on</p>
-    <ul>
+    <!-- My projects section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <p>Here are some projects that i have worked on</p>
+      <ul>
         <li>
-           <strong><a href="https://github.com/mohmosh/Diana-Beth-Fitness.git" target="_blank">Project One</a></strong><br>
-           A fitness website that provides videos and devotionals to help you be and stay fit.
-        </li>
-
-         <li>
-           <strong><a href="https://github.com/mohmosh/bitblock-be.git" target="_blank">Project Two</a></strong><br>
-           A site to keep track of your crypto assents and investments.
+          <strong><a href="https://github.com/mohmosh/Diana-Beth-Fitness.git" target="_blank">Project
+              One</a></strong><br>
+          A fitness website that provides videos and devotionals to help you be and stay fit.
         </li>
 
         <li>
-            <strong><a href="https://github.com/mohmosh/sms-Notification.git" target="_blank">Project Three</a></strong><br>
-            A simple SMS notification system that allows users to send and receive SMS messages.
+          <strong><a href="https://github.com/mohmosh/bitblock-be.git" target="_blank">Project Two</a></strong><br>
+          A site to keep track of your crypto assents and investments.
         </li>
-    </ul>
-   </section>
 
-   <!-- My contact section -->
-   <section id="contact">
-    <h2>Contact Information</h2>
-    <p>If you would like to get in touch with me, please feel free to reach out.</p>
-    <p><strong>Phone Number:</strong>+254 714 560 687</a></p>
-    <p><strong>Email:</strong>moshwanjiku@gmail.com</a></p>
+        <li>
+          <strong><a href="https://github.com/mohmosh/sms-Notification.git" target="_blank">Project
+              Three</a></strong><br>
+          A simple SMS notification system that allows users to send and receive SMS messages.
+        </li>
+      </ul>
+    </section>
 
-    <p>Or Connect with me on Social Media</p>
-    <ul>
+    <!-- My contact section -->
+    <section id="contact">
+      <h2>Contact Information</h2>
+      <p>If you would like to get in touch with me, please feel free to reach out.</p>
+      <p><strong>Phone Number:</strong>+254 714 560 687</a></p>
+      <p><strong>Email:</strong>moshwanjiku@gmail.com</a></p>
+
+      <p>Or Connect with me on Social Media</p>
+      <ul>
         <li><a href="https://www.instagram.com/moshwanjiku/">Instagram</a></li>
         <li><a href="https://www.facebook.com/maureen.wanjiku.900">Facebook</a></li>
         <li><a href="https://www.linkedin.com/in/maureen-wanjiku-998b38155/">linkedin</a></li>
         <li><a href="https://github.com/mohmosh">GitHub</a></li>
-    </ul>
+      </ul>
 
-    <form>
+      <form>
         <label for="name">name</label>
         <input type="text" id="name" placeholder="Enter Your Name" required>
 
@@ -145,16 +164,16 @@
 
         <button type="submit">Send Message</button>
 
-    </form>
-  
-   </section>
+      </form>
+
+    </section>
 
 
-</main>
-<footer>
+  </main>
+  <footer>
     <p>&copy; 2025 Maureen Wanjiku. All rights reserved.</p>
-</footer>
+  </footer>
 
 </body>
-</html>
 
+</html>
